--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,7 +21,55 @@ body {
 }
 
 @layer utilities {
+
   .text-balance {
     text-wrap: balance;
   }
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+
+  .rotate-6 {
+    transform: rotate(6deg);
+  }
+}
+
+
+/* Perspective Container */
+.perspective {
+  perspective: 1000px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* 3D Transformation Container */
+.cycleAniSlider {
+  width: 250px;
+  height: 250px;
+  position: relative;
+  transform-style: preserve-3d;
+}
+
+/**/
+.text-stroke{
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #fe00b0;
+}
+
+.text-stroke-yellow{
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #fff429;
 }
